<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/mainbackground">
    
     <Space
  		android:layout_width="1dp"
 		 android:layout_height="50dp"/>
    
    
 <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_gravity="center"
              />
 
   <Space
  		android:layout_width="1dp"
 		 android:layout_height="50dp"/>
 
  <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main2Message"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:gravity="center"
              />
    
    
    	  <Space
  		android:layout_width="1dp"
 		 android:layout_height="200dp"/>
    
        <Button
        android:id="@+id/buttonSignIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:layout_gravity="center"
        android:background="@drawable/button_shape"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:text="@string/signin"
        android:onClick="signIn"
         />
        
            <Space
  		android:layout_width="1dp"
 		 android:layout_height="30dp"/>
            
          <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="#ffffff"
        android:layout_gravity="center"
              />
  			<Space
	  		android:layout_width="1dp"
	 		 android:layout_height="30dp"/>
  			
  			
          <Button
        android:id="@+id/buttonSignUP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:layout_gravity="center"
        android:background="@drawable/button_shape"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:text="@string/signup"
         />
          
          
          
    
</LinearLayout>
