<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.finalhci.MainActivity"
    android:orientation="vertical" 
    android:background="@drawable/mainbackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:textSize="30sp"
       	android:text="@string/welcome"
       	android:layout_gravity="center"
       	android:textStyle="bold"
       	android:textColor="#ffffff"
       	/>
      <Space
  android:layout_width="1dp"
  android:layout_height="30dp"/>
      
       <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome1"
        android:width="700dp" 
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#ffffff"/>
    
      
      <Space
  android:layout_width="1dp"
  android:layout_height="30dp"/>
      
      
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview1" 
        android:textSize="24sp"
        android:layout_gravity="center"
        android:textColor="#ffffff"/>
  
      <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/buildings"
         android:textSize="22sp"
        android:layout_gravity="center"
        />
      
        <Space
  android:layout_width="1dp"
  android:layout_height="30dp"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview2"
         android:textSize="24sp"
        android:layout_gravity="center"
        android:textColor="#ffffff"
         />
    
        <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
         android:textSize="22sp"
        android:layout_gravity="center"
        />
        
          <Space
  android:layout_width="1dp"
  android:layout_height="30dp"/>
        
        <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="500dp"
        android:layout_gravity="center"
        android:background="@drawable/button_shape"
        android:textColor="#000000"
        android:textSize="22sp"
        android:text="@string/button1"
         />

</LinearLayout>
