 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.finalhci.SabalToLhsb"
    android:orientation="vertical"
    android:background="@drawable/mainbackground" >
    
    
  <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"  
        >
        
      <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_saballhsb"
        android:text="@string/saballhsb"
        android:textColor="#ffffff"
        android:gravity="center"
        android:textSize="70sp"   
        android:textStyle="bold"
            />
    </LinearLayout>
    
  
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@drawable/screen1"
        >
    </LinearLayout>
	 
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textviewsaballhsb_distance"
        android:textColor="#ffffff"
        android:background="#000000"
        android:gravity="center"
        android:textSize="22sp"
        />
    
     <Space
  android:layout_width="1dp"
  android:layout_height="30dp"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currentposition"
        android:textColor="#ffffff"
        android:background="#000000"
        android:gravity="center"
        android:textSize="22sp"
        />
    
      <Space
  android:layout_width="1dp"
  android:layout_height="30dp"/>
      

      
       <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sabaltodevice"
        android:textColor="#ffffff"
        android:background="#000000"
        android:gravity="center"
        android:textSize="22sp"
        />

       <Space
		  android:layout_width="1dp"
		  android:layout_height="30dp"/>
		    
          <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lhsbtodevice"
        android:textColor="#ffffff"
        android:background="#000000"
        android:gravity="center"
        android:textSize="22sp"
        />
       
		   <Space
		  android:layout_width="1dp"
		  android:layout_height="30dp"/>
   
   
   
      <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/directions"
        android:textSize="50sp"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        android:textStyle="bold"
            />
      
        <Space
  android:layout_width="1dp"
  android:layout_height="30dp"/>
    
	  <LinearLayout 
	      android:id="@+id/directions1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#4DEB17"
        >
   
     <ImageView 
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:src="@drawable/test1"
         />
     
      <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:textStyle="bold"
            />
         
    </LinearLayout>
    
	  
	  
	  
	  
	  
	  
	    <Space
  android:layout_width="1dp"
  android:layout_height="30dp"/>
	    
	      <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#4DEB17"
        >
   
     <ImageView 
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:src="@drawable/test1"
         />
     
      <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:textStyle="bold"
            />
         
    </LinearLayout>
    
	      
	      
	      
	      
	          <Space
  android:layout_width="1dp"
  android:layout_height="30dp"/>
	    
	      <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#4DEB17"
        >
   
     <ImageView 
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:src="@drawable/test1"
         />
     
      <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:textStyle="bold"
            />
         
    </LinearLayout>
    
	      
	      
	      
	      
	          <Space
  android:layout_width="1dp"
  android:layout_height="30dp"/>
	    
	      <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#4DEB17"
        >
   
     <ImageView 
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:src="@drawable/test1"
         />
     
      <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:textStyle="bold"
            />
         
    </LinearLayout>

	            <Space
			  android:layout_width="1dp"
			  android:layout_height="35dp"/>
	      
	             <Button
        android:id="@+id/btnSabalLhsb_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:layout_gravity="center"
        android:background="@drawable/button_shape"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:text="@string/goback"
        android:onClick="goingBack"
         />
	      
</LinearLayout>
    </ScrollView>
